complete binary mime for reactive, clean up warnings